# Great-Exercises-On-Data-structures-and-Algorithms

./: README.md  hoangmanhkhiem.docx
Problem29/: CMakeLists.txt  HuffmanTree.h  main.cpp  priorityqueue.hpp
Problem_13/: CMakeLists.txt  cuocgoi.txt  ketqua.txt  main.cpp
Problem_13/libcs/: Statistic_lib.cpp  Statistic_lib.h  converttime.cpp  converttime.h  customer_lib.cpp  customer_lib.h  infoCall_lib.cpp  infoCall_lib.h  list_called_lib.cpp  list_called_lib.h  list_customer_lib.cpp  list_customer_lib.h  list_statistic_lib.cpp  list_statistic_lib.h  setup.cpp  setup.h  systemStatistic_lib.cpp  systemStatistic_lib.h  vector.hpp
Problem_29/: CMakeLists.txt  data.txt  main.cpp
app/: Huffman.bat  Huffman.vbs  Tinhtiendienthoai.bat  Tinhtiendienthoai.vbs
app/Project13/: Statistic_lib.hpp  check.py  converttime.hpp  customer_lib.hpp  home.py  infoCall_lib.hpp  list_called_lib.hpp  list_customer_lib.hpp  list_statistic_lib.hpp  log_cuoc.txt  log_time.txt  main.cpp  main.py  main.pyw  menu.py  more.py  run.bat  setupinfo.py  systemStatistic_lib.hpp
app/Project13/data/: cuocgoi.txt  ketqua.txt  khachhang.txt
app/Project29/: HuffmanTree.h  check.py  decode.py  encode.py  home.py  main.py  main.pyw  main_decode.cpp  main_encode.cpp  menu.py  more.py  output.txt  setup_decode.py  setup_encode.py  test.py
